# coq

./: .gitignore  .gitlab-ci.yml  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Makefile  Makefile.ci  README.md  coq-core.opam  coqide-server.opam  default.nix  dune  dune-project  rocq-core.opam  rocq-devtools.opam  rocq-runtime.opam  rocq-runtime.opam.template  rocq-test-suite.opam  rocqide.opam
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
boot/: env.ml  env.mli  usage.ml
checker/: checkInductive.ml  checkInductive.mli  checkLibrary.ml  coqchk_main.ml  mod_checking.ml  safe_checking.ml  values.ml  votour.ml
clib/: cList.ml  cList.mli  cMap.ml  cMap.mli  cSig.mli  cString.ml  cString.mli  hMap.ml  option.ml  option.mli  polyMap.ml  polyMap.mli
config/: coq_byte_config.mli  coq_config.mli
coqpp/: coqpp_ast.mli  coqpp_lex.mll  coqpp_main.ml  coqpp_parse.mly
dev/: Bugzilla_Coq_autolink.user.js  Coq_Bugzilla_autolink.user.js  debugger_support.ml  dune-workspace.all  top_printers.dbg  top_printers.ml  top_printers.mli  vm_printers.ml
doc/: Makefile.docgram  README.md  dune
engine/: eConstr.ml  eConstr.mli  evar_kinds.ml  evar_kinds.mli  evarnames.ml  evarnames.mli  evarutil.ml  evarutil.mli  evd.ml  evd.mli  logic_monad.ml  logic_monad.mli  namegen.ml  namegen.mli  nameops.ml  polyFlags.ml  polyFlags.mli  proofview.ml  proofview.mli  proofview_monad.ml  proofview_monad.mli  termops.ml  termops.mli  uState.ml  uState.mli  univFlex.ml  univFlex.mli  univGen.ml  univGen.mli  univMinim.ml  univMinim.mli  univNames.ml  univProblem.ml  univProblem.mli  univSubst.ml  univSubst.mli
gramlib/: gramext.ml  gramext.mli  grammar.ml  grammar.mli  lStream.ml  lStream.mli  plexing.mli  stream.ml  stream.mli
interp/: abbreviation.ml  abbreviation.mli  constrexpr.mli  constrextern.ml  constrextern.mli  constrintern.ml  constrintern.mli  dumpglob.ml  dumpglob.mli  genintern.ml  genintern.mli  impargs.ml  implicit_quantifiers.ml  modintern.ml  modintern.mli  notation.ml  notation.mli  notation_ops.ml  notation_ops.mli  notation_term.mli  notationextern.ml  notationextern.mli  primNotations.ml  primNotations.mli  reserve.ml  smartlocate.ml
kernel/: cClosure.ml  cClosure.mli  cPrimitives.ml  constant_typing.ml  constant_typing.mli  constr.ml  constr.mli  context.ml  context.mli  conversion.ml  conversion.mli  cooking.ml  cooking.mli  declarations.mli  declareops.ml  declareops.mli  discharge.ml  discharge.mli  dune  entries.mli  environ.ml  environ.mli  esubst.ml  esubst.mli  genlambda.ml  genlambda.mli  hConstr.ml  indTyping.ml  indTyping.mli  indtypes.ml  indtypes.mli  inductive.ml  inductive.mli  mod_declarations.ml  mod_declarations.mli  (+54 more)
(+1252 files in other folders)
